# snake

./: Cargo.toml
src/: main.rs
