[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[dependencies.sdl2]
version = "0.37"
default-features = false
features = ["static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "2024.09.23" # to check for a new one, check https://github.com/microsoft/vcpkg/releases

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
